--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"vite": "^5.0.8"
 	},
 	"dependencies": {
+		"@fortawesome/free-regular-svg-icons": "^6.5.1",
 		"@fortawesome/free-solid-svg-icons": "^6.5.1",
 		"svelte-fa": "^4.0.1"
 	}
