--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,11 @@
 		"resolveJsonModule": true,
 		"allowJs": true,
 		"checkJs": true,
-		"isolatedModules": true
+		"isolatedModules": true,
+		"paths": {
+			"@/*": ["src/*"]
+		},
+		"baseUrl": "."
 	},
 	"include": ["src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
 	"references": [{ "path": "./tsconfig.node.json" }]
